# proyectoRust

./: Cargo.toml  Dockerfile  README.md
frontend/: git.ignore  package-lock.json  package.json  server.js
frontend/public/: index.html
src/: main.rs
