[package]
name = "apiRust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }